# ucsc-ai-agent-course

./: .env  README.md  homework1.md  main.py  pyproject.toml
.cursor/: mcp.json
gemini-adk/: agent_runner.py
homeworks/: homework1.md  homework2.md
hw3/: .gitignore  Final Project Proposal AI Agents.docx  Final Project Proposal AI Agents.md  README.md  (+14 more)
src/: .gitignore  README.md  env.example  pyproject.toml
src/gemini-adk/: README.md  agent_runner.py  env_config.py
src/gemini-adk/agents/: _adk_bootstrap.py
src/gemini-adk/agents/agent_doubleword/: agent.py
src/gemini-adk/agents/agent_with_mcp/: agent.py
src/gemini-adk/agents/basic_agent/: agent.py
src/gemini-adk/agents/currency_agent/: README.md  agent.py  mcp_server.py
src/gemini-adk/agents/mcp_files/: README.md  tips.txt
src/gemini-adk/evaluation/bookfinder/: README.md  agent.py  heartstopper.evalset.json
src/gemini-adk/evaluation/product_research/: README.md  agent.py
src/gemini-adk/evaluation/travel_planner/: README.md  agent.py  app.py
src/gemini-adk/multi-agents/: README.md
src/gemini-adk/multi-agents/agent_quality/: agent.py  eval_set_1.evalset.json  weather_tool.py
src/gemini-adk/multi-agents/loop/: agent.py
src/gemini-adk/multi-agents/parallel/: agent.py
src/gemini-adk/multi-agents/sequential/: agent.py
src/gemini-adk/multi-agents/shared/: __init__.py  model.py  types.py
src/hw1-skeleton/: agent.py  tools.py
src/tools/claude/: README.md
src/tools/gemini/: README.md  gemini_func_declare.py
src/tools/openai/: README.md  openai_dw_func_declare.py  openai_func_declare.py
(+31 files in other folders)
